remove geohash post

--- a/projects.html
+++ b/projects.html
@@ -130,7 +130,7 @@
     <p>Link: Project has been forked by the OKFN here: <a href="http://reclinejs.com">ReclineJS</a>
     </p>
     <div class="figure">
-      <img src="recline.png" alt="Recline UI">
+      <img src="media/recline.png" alt="Recline UI">
       <p class="caption">Recline Editor</p>
     </div>
     
