--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
     <h1 id="npmsearch">npmsearch</h1>
     <p>The npm command line tool has a built in search feature but it is quite barebones and doesn't have a dedicated full text index. To provide a better search experience to npm users <a href="http://github.com/tmpvar" target="_blank">Elijah Insua (tmpvar)</a> has created <a href="http://npmsearch.com" target="_blank">npmsearch.com</a> which offers lightning fast search (Solr + SSDs) and a CORS enabled JSON API for adding npm search to any app.</p>
     <p><a href="http://npmsearch.com" target="_blank"><img src="/media/npmsearch.png"></a></p>
-    <p>Here's a live embedded iframe of <a href="http://requirebin.com/?gist=5953535&q=voxel" target="_blank">this RequireBin</a> integrating with the npmsearch API and rendering output to a fake ANSI terminal via <a href="https://npmjs.org/package/hypernal" target="_blank">hypernal</a> and <a href="https://npmjs.org/package/tablify" target="_blank">tablify</a>, two modules I recently found on npm.</p>
+    <p>Here's a live embedded iframe of <a href="http://requirebin.com/?gist=maxogden/5953535&q=voxel" target="_blank">this RequireBin</a> integrating with the npmsearch API and rendering output to a fake ANSI terminal via <a href="https://npmjs.org/package/hypernal" target="_blank">hypernal</a> and <a href="https://npmjs.org/package/tablify" target="_blank">tablify</a>, two modules I recently found on npm.</p>
     <p>
-    <iframe width="750" height="315" src="http://requirebin.com/embed?gist=5953535&q=voxel" frameborder="0" allowfullscreen=""></iframe>
+    <iframe width="750" height="315" src="http://requirebin.com/embed?gist=maxogden/5953535&q=voxel" frameborder="0" allowfullscreen=""></iframe>
     </p>
     <p>For a more complex RequireBin example check out this WebGL Ambient Occlusion Voxel rendering demo by computational geometry PHD student <a href="http://twitter.com/mikolalysenko">Mikola Lysenko</a>:</p>
-    <p><a href="http://requirebin.com/?gist=5941747" target="_blank"><img src="/media/voxel-ao-requirebin.png"></a></p>
+    <p><a href="http://requirebin.com/?gist=maxogden/5941747" target="_blank"><img src="/media/voxel-ao-requirebin.png"></a></p>
     <p>Mikola also happens to be the most prolific author of node modules lately (according to npmjs.org), you should definitely <a href="https://npmjs.org/~mikolalysenko" target="_blank">look at his modules</a> and <a href="http://0fps.wordpress.com" target="_blank">read his blog</a>.
     </p>
     <p>I'll end this post with this, the first and arguably most important rule from <a href="https://en.wikipedia.org/wiki/Unix_philosophy" target="_blank">The Art of Unix Programming</a>, a text close to the hearts of <a href="http://blog.izs.me/post/48281998870/unix-philosophy-and-node-js" target="_blank">many of the Node community members</a>.</p>
