--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 <h2 class="author">Max Ogden</h2>
 
     </div>
-    <p>max at maxogden dot com</p>
+    <p><a href="https://github.com/maxogden/messages">email me here</a></p>
     <p>@maxogden</p>
     <p>github.com/maxogden</p>
   </body>
